...
                    .font(.system(size: 40, weight: .semibold))
                    .foregroundColor(.teal)
                    .padding()
                    .padding()
                
                // Create medication name field
                TextField("Medication Name:", text: $name)
                    .font(.system(size: 20))
                    .frame(height: 64)
                    .background(Color(.systemGray6))
                    .cornerRadius(5)
                    .disableAutocorrection(true)
                
                
                // Create dosage field, numberpad
                TextField("Dosage:", text: $dosage)
                    .font(.system(size: 20))
                    .frame(height: 64)
                    .background(Color(.systemGray6))
                    .cornerRadius(5)
                    .keyboardType(.numberPad)
                    .disableAutocorrection(true)
...
