...
            Section(header: Text("⚠️").font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)) {
                Text("If you are experiencing a medical emergency, call 911 or your local emergency number immediately.").font(.system(size: 13, weight: .light, design: .rounded))
                    .font(.subheadline)
            }

         // Title of page
        }.navigationBarTitle("Welcome to Harmony Mood!", displayMode: .inline)
}
}

struct infoPage_Previews: PreviewProvider {
    static var previews: some View {
        infoPage()
...
