...
                            HStack {
                                Text("Dosage: ")
                                TextField("", text: self.$dosage)
                                    .keyboardType(.numberPad)
                            }
                            }
                            // "Add" button
                            Section {
                                Button(action: {
                                
                                    // Call function to add row in sqlite DB
                                    DB_Manager().addMedication(nameValue: self.name, unitsValue: self.units, dosageValue: Int64(self.dosage) ?? 0)
                                     
...
